--- a/app/assets/stylesheets/appointments.scss
+++ b/app/assets/stylesheets/appointments.scss
@@ -11,6 +11,10 @@ body {
   padding-bottom: 200px;
 }
 
+a {
+  color: darkred;
+  text-decoration: none;
+}
 .submit-button {
   background: #CC0000;
   color: #FFFFFF;
